helm/istio-gateway/istioGateway.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eventbus-gateway
  namespace: eventbus
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rabbit-http-gateway
  namespace: eventbus
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 8081
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbit-proxy-rule
  namespace: eventbus
spec:
  hosts:
    - "*"
  gateways:
    - eventbus-gateway
  http:
    - route:
        - destination:
            port:
              number: 15672
            host: rabbitmq-cluster1
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbit-http-rule
  namespace: eventbus
spec:
  hosts:
    - "*"
  gateways:
    - rabbit-http-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 8080
            host: rabbit-http-proxy
          weight: 100
